[gd_scene load_steps=5 format=3 uid="uid://cmi7lt1s1otja"]

[ext_resource type="Script" path="res://scripts/enemies/crow/crow.gd" id="1_81c02"]
[ext_resource type="AudioStream" uid="uid://c7ikdt8rdrant" path="res://music/metronome-tempo-single-sound_G_major.wav" id="2_3gbeo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dutsr"]
radius = 85.0529

[sub_resource type="CircleShape2D" id="CircleShape2D_isv8e"]
radius = 86.093

[node name="Crow" type="StaticBody2D"]
script = ExtResource("1_81c02")

[node name="HurtboxCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_dutsr")

[node name="AttackTimer" type="Timer" parent="."]

[node name="Hitbox" type="Area2D" parent="."]

[node name="HitboxShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-82, 85)
shape = SubResource("CircleShape2D_isv8e")
disabled = true
debug_color = Color(1, 0.0784314, 0, 0.176471)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_3gbeo")

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
